--- a/src/SuperMemoAssistant.Plugins.MouseoverPopup/SuperMemoAssistant.Plugins.MouseoverPopup.csproj
+++ b/src/SuperMemoAssistant.Plugins.MouseoverPopup/SuperMemoAssistant.Plugins.MouseoverPopup.csproj
@@ -28,6 +28,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Anotar.Serilog.Fody">
@@ -48,7 +49,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="PluginManager.Interop">
-      <Version>0.2.1.46</Version>
+      <Version>0.2.1.49</Version>
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody">
       <Version>3.2.8</Version>
@@ -63,6 +64,7 @@
     <PackageReference Include="SuperMemoAssistant.Services.Sentry">
       <Version>2.0.5-alpha.2</Version>
     </PackageReference>
+    <PackageReference Include="SuperMemoAssistant.Services.UI" Version="2.0.4.6" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MouseoverPopup.Interop\MouseoverPopup.Interop.csproj" />
