--- a/src/SuperMemoAssistant.Plugins.MouseoverPopup/SuperMemoAssistant.Plugins.MouseoverPopup.csproj
+++ b/src/SuperMemoAssistant.Plugins.MouseoverPopup/SuperMemoAssistant.Plugins.MouseoverPopup.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MouseoverPopup.Interop\MouseoverPopup.Interop.csproj" />
+    <ProjectReference Include="..\..\..\PopupWindow.Interop\src\SuperMemoAssistant.Plugins.PopupWindow.Interop\SuperMemoAssistant.Plugins.PopupWindow.Interop.csproj" />
   </ItemGroup>
   <Target Name="CopyOutput" AfterTargets="Build">
     <Exec Command="xcopy /h /i /c /k /e /r /y &quot;$(TargetDir)*&quot; &quot;%25UserProfile%25\SuperMemoAssistant\Plugins\Development\$(ProjectName)&quot;" />
