Refactor. Update UI.

--- a/src/SuperMemoAssistant.Plugins.MouseoverPopup/SuperMemoAssistant.Plugins.MouseoverPopup.csproj
+++ b/src/SuperMemoAssistant.Plugins.MouseoverPopup/SuperMemoAssistant.Plugins.MouseoverPopup.csproj
@@ -73,4 +73,19 @@
   <Target Name="CopyOutput" AfterTargets="Build">
     <Exec Command="xcopy /h /i /c /k /e /r /y &quot;$(TargetDir)*&quot; &quot;%25UserProfile%25\SuperMemoAssistant\Plugins\Development\$(ProjectName)&quot;" />
   </Target>
+  <ItemGroup>
+    <None Update="Images\SMExtract.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Images\web.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Images\Editor.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
