--- a/src/SuperMemoAssistant.Plugins.MouseoverPopup/SuperMemoAssistant.Plugins.MouseoverPopup.csproj
+++ b/src/SuperMemoAssistant.Plugins.MouseoverPopup/SuperMemoAssistant.Plugins.MouseoverPopup.csproj
@@ -65,6 +65,7 @@
       <Version>2.1.0-beta.6</Version>
     </PackageReference>
     <PackageReference Include="SuperMemoAssistant.Services.UI" Version="2.1.0-beta.12" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MouseoverPopupInterfaces\MouseoverPopupInterfaces.csproj" />
